base/lit/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lit
spec:
  replicas: 1
  template:
    metadata:
      name: lit
      labels:
        base: lit
    spec:
      containers:
      - name: lit
        image: asia.gcr.io/nonononono/lit:latest
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "cp -pR ./public /apps/lit-shared/ && bundle exec unicorn_rails -c config/unicorn.rb -E production"]
        # command: ["/bin/sh", "-c", "cp -pR /apps/lit/public /apps/lit-shared/ && bundle exec rails s -b 0.0.0.0"]
        volumeMounts:
        - name: lit-shared
          mountPath: /apps/lit-shared

      - name: simply-nginx
        image: nginx:alpine
        ports:
        - name: simply-nginx
          containerPort: 80
        volumeMounts:
        - name: simply-nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: lit-shared
          mountPath: /apps/lit-shared

      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=list-213015:asia-northeast1-c:litserver=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql

      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: gcread
      - name: simply-nginx-conf
        configMap:
          name: simply-nginx-conf
      - name: lit-shared
        emptyDir: {}
