base/lit/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: lit
spec:
  type: NodePort  # type: LoadBalancer
  selector:
    base: lit
  ports:
  - name: rails
    port: 3000
    targetPort: 3000
  - name: http
    port: 80
    targetPort: 80
