base/lit/ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lit
  annotations:
    kubernetes.io/ingress.global-static-ip-name: lit-lb
    # TODO
    # kubernetes.io/ingress.allow-http: "false"
  # TODO
  # tls:
  # - secretName: wildcard-lit-com-20190420
spec:
  backend:
    serviceName: lit
    servicePort: 80
